force-app/main/default/objects/SuRF_Contacts_and_Training__c/SuRF_Contacts_and_Training__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF-Contacts and Training</label>
    <nameField>
        <displayFormat>SuRF-CT-{00000}</displayFormat>
        <label>SuRF-Contacts and Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuRF-Contacts and Trainings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>