force-app/main/default/objects/SuRF_Contacts_and_Training__c/fields/Curriculum_Title__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Title__c</fullName>
    <label>Curriculum Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>