force-app/main/default/objects/SuRF_Contacts_and_Training__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Service and Support</fullName>
            </value>
            <value>
                <fullName>Service &amp; Support</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;POS</fullName>
            </value>
            <value>
                <fullName>Marketing;POS;MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;POS;Partner Primary Contact</fullName>
            </value>
            <value>
                <fullName>Marketing;POS;Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;Partner Primary Contact</fullName>
            </value>
            <value>
                <fullName>Marketing;Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;RMA</fullName>
            </value>
            <value>
                <fullName>Marketing;RMA;POS</fullName>
            </value>
            <value>
                <fullName>Marketing;Service and Support;Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;Technical</fullName>
            </value>
            <value>
                <fullName>Marketing;Technical;POS;Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>Marketing;Technical;Service and Support</fullName>
            </value>
            <value>
                <fullName>Marketing;Technical;Service and Support;POS</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>POS;MDF</fullName>
            </value>
            <value>
                <fullName>POS;Partner Primary Contact</fullName>
            </value>
            <value>
                <fullName>POS;Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>Partner Primary Contact</fullName>
            </value>
            <value>
                <fullName>Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>RMA;POS;Partner Primary Contact</fullName>
            </value>
            <value>
                <fullName>RMA;POS;Partner Primary Contact;MDF</fullName>
            </value>
            <value>
                <fullName>RMA;Partner Primary Contact;MDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>