force-app/main/default/objects/SuRF_Contacts_and_Training__c/fields/Training_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_Completion_Status__c</fullName>
    <label>Training Completion Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>