force-app/main/default/objects/SuRF_Contacts_and_Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Competency__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Curriculum_Course_Title__c</columns>
    <columns>Curriculum_Title__c</columns>
    <columns>Training_Record_Type__c</columns>
    <columns>Email__c</columns>
    <columns>Partner_Program__c</columns>
    <columns>Partner_Training_Compliance__c</columns>
    <columns>Partner_Training_Required__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>